Fixed missing details from timelines bug, enlarged pagination bullets for projects carousel on small screens

--- a/src/index.css
+++ b/src/index.css
@@ -29,6 +29,12 @@
 	body {
 		@apply text-text-primary bg-primary font-sans;
 	}
+
+	@media (max-width: 1280px) {
+		:root {
+			--swiper-pagination-bullet-size: 16px;
+		}
+	}
 }
 
 @layer components {
